--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,440 @@
 body {
-  background: $c-gray;
+  padding: 0;
+  margin: 0;
+  font-family: "Myriad Pro", sans-serif;
+}
+
+.content {
+  max-width: 1060px;
+  margin: 0 auto;
+  padding: 0 20px;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header {
+  background-color: #629b57;
+  border-bottom: 1px solid #569554;
+  font-size: 16px;
+  padding: 15px 0;
+
+  .close-block {
+    cursor: pointer;
+    font-size: 35px;
+    line-height: 20px;
+  }
+
+  &-text {
+    margin: 0;
+  }
+}
+
+.main {
+  height: 820px;
+  background-color: #60a75e;
+  box-sizing: border-box;
+  padding-top: 285px;
+  
+  
+  &-header {
+    margin: 0;
+    font-size: 46px;
+    line-height: 52px;
+    font-weight: 500;
+    width: 450px;
+  }
+
+  .yellow {
+    color: #ffea00;
+  }
+
+  .form {
+    color: black;
+    box-sizing: border-box;
+    width: 400px;
+    height: 250px;
+    padding: 30px;
+    background-color: #fff;
+    box-shadow: 2px 5px 20px 0 rgba(0,0,0,0.75);
+
+    &-header {
+      margin: 0 0 25px;
+      font-size: 20px;
+      line-height: 20px;
+    }
+
+    &-text {
+      color: #999;
+      margin: 0 0 10px;
+      font-size: 16px;
+      line-height: 16px;
+    }
+
+    .levels {
+      margin-bottom: 20px;
+      width: 340px;
+      height: 40px;
+      border: 1px solid #a1a1a1;
+      padding: 0 15px;
+      appearance: none;
+      background-image: url(../images/drop_down_icon.svg);
+      background-repeat: no-repeat;
+      background-position: 310px 16px;
+
+      &:hover,
+      &:focus {
+        outline: 1px solid #60a75e;
+      }
+    }
+
+    .how-many {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .counter {
+      width: 130px;
+      height: 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border: 1px solid #bababa;
+      border-radius: 3px;
+      overflow: hidden;
+
+      .decrement,
+      .increment {
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        border-radius: 0;
+        background: linear-gradient(#919691, #606760);
+        border: none;
+        color: #fff;
+
+        &:hover,
+        &:focus {
+          border: 1px solid #60a75e;
+        }
+      }
+    }
+
+    .result {
+      display: flex;
+      align-items: baseline;
+      width: 165px;
+      height: 40px;
+      border-radius: 3px;
+      overflow: hidden;
+      color: #fff;
+
+      .sum {
+        width: 75px;
+        line-height: 40px;
+        text-align: center;
+        background: linear-gradient(#919691, #606760);
+      }
+
+      .pop-up-button {
+        cursor: pointer;
+        width: 90px;
+        box-sizing: border-box;
+        line-height: 40px;
+        align-self: flex-start;
+        padding: 0;
+        background: linear-gradient(#9bdf98, #6ed16a);
+        border: none;
+        color: #fff;
+
+        &:hover,
+        &:focus {
+          border: 1px solid #467c44;
+        }
+      }
+    }
+  }
+}
+
+.popup {
+  position: relative;
+  display: none;
+  z-index: 1;
+  left: 0;
+  top: 0;
+
+  .ui-dialog {
+    padding: 0;
+  }
+
+  &-close {
+    display: inline-block;
+    font-size: 24px;
+    line-height: 18px;
+    color: #adadad;
+    height: 20px;
+    margin: 20px 20px 17px 420px;
+    cursor: pointer;
+  }
+
+  &-header {
+    font-size: 20px;
+    margin: 0 0 12px;
+    text-align: center;
+  }
+  
+  &-text {
+    color: #adadad;
+    font-size: 16px;
+    margin: 17px 0 10px;
+  }
+  
+  &-text-header {
+    text-align: center;
+    margin-bottom: 17px;
+  }
+
+  &-form {
+    margin: 0 60px;
+  }
+
+  &-input {
+    width: 340px;
+    height: 40px;
+    box-sizing: border-box;
+    border: 1px solid #bababa;
+    outline-color: #60a75e;
+    padding-left: 40px;
+
+    &:hover,
+    &:focus {
+      border: 1px solid #60a75e;
+    }
+
+    &-name {
+      background: no-repeat url(../images/user_icon.svg);
+      background-position: 12px 12px;
+    }
+
+    &-mail {
+      background: no-repeat url(../images/email_icon.svg);
+      background-position: 12px 13px;
+    }
+
+    &-phone {
+      padding-left: 90px;
+    }
+  }
+
+  .country {
+    display: block;
+    width: 68px;
+    height: 38px;
+    margin-top: -40px;
+    position: relative;
+    top: 39px;
+    left: 1px;
+    border: none;
+    border-right: 1px solid #bababa;
+    padding-left: 5px;
+    appearance: none;
+    background-image: url(../images/drop_down_icon.svg);
+    background-repeat: no-repeat;
+    background-position: 40px 16px;
+  }
+  
+  .plus {
+    display: block;
+    width: 20px;
+    margin-top: -25px;
+    position: relative;
+    top: 28px;
+    left: 77px;
+  }
+}
+
+.modal {
+  display: none;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 460px;
+  height: 340px;
+  padding: 20px;
+
+  &-close {
+    cursor: pointer;
+    font-size: 25px;
+    float: right;
+    margin: 15px 20px 0 0;
+    color: #cfcfcf;
+  }
+
+  &-content {
+    text-align: center;
+  }
+
+  &-image {
+    margin: 70px 0 20px;
+  }
+
+  &-header {
+    font-size: 20px;
+    margin: 0 0 10px;
+  }
+
+  &-text {
+    color: #cfcfcf;
+    margin: 0 0 20px;
+    font-size: 16px;
+  }
+  
+  &-button {
+    cursor: pointer;
+    box-sizing: border-box;
+    width: 145px;
+    height: 40px;
+    color: #fff;
+    background: linear-gradient(#9bdf99, #6ed16a);
+    border: none;
+    border-radius: 3px;
+    text-align: center;
+    outline-color: #60a75e;
+    margin: 0 0 70px;
+  }
+}
+
+div.ui-dialog .ui-dialog-content {
+  padding: 0;
+}
+
+div.ui-dialog {
+  padding: 0;
+  width: 460px !important;
+}
+
+div.popup-content {
+  margin: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+div.ui-dialog .ui-dialog-buttonpane {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+div.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {
+  float: none;
+}
+
+.ui-dialog div.ui-dialog-buttonpane button {
+  border: none;
+  background: #fff;
+  width: 145px;
+  height: 40px;
+  margin: 10px 0 30px 155px;
+}
+
+.ui-button span.ui-button-text {
+  display: block;
+  box-sizing: border-box;
+  width: 145px;
+  height: 40px;
+  color: #fff;
+  background: linear-gradient(#9bdf99, #6ed16a);
+  border: none;
+  border-radius: 3px;
+  text-align: center;
+  outline-color: #60a75e;
+  padding-top: 8px;
+
+  &:hover,
+  &:focus {
+    border: 1px solid #60a75e;
+  }
+}
+
+.ui-dialog-titlebar {
+  display: none;
+}
+
+div.ui-widget-overlay {
+  background: black;
+  opacity: 0.7;
+}
+
+@media (max-width: 920px) {
+
+  div.ui-dialog {
+    padding: 0;
+    width: 360px !important;
+  }
+
+  .ui-dialog div.ui-dialog-buttonpane button {
+    margin-left: 100px;
+  }
+
+  .popup {
+
+    &-input {
+      width: 300px;
+    }
+
+    &-form {
+      margin: 0 30px;
+    }
+
+    &-close {
+      margin-left: 320px;
+    }
+  }
+
+  .content {
+    padding: 0;
+  }
+
+  .header {
+    padding: 15px 0;
+
+    &-text {
+      font-size: 14px;
+    }
+  }
+
+  .main {
+    height: 540px;
+    padding-top: 75px;
+
+    &-content {
+      flex-direction: column;
+    }
+
+    .text {
+      width: 340px;
+      text-align: center;
+    }
+
+    &-header {
+      font-size: 25px;
+      width: 340px;
+    }
+
+    .form {
+      width: 360px;
+
+      .levels {
+        width: 300px;
+        background-position: 270px 16px;
+      }
+
+      .result {
+        width: 150px;
+
+      }
+    }
+  }
+
 }
