--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,15 +35,24 @@ body {
   height: 820px;
   background-color: #60a75e;
   box-sizing: border-box;
-  padding-top: 285px;
+  padding-top: 282px;
+
+  .text {
+    font-family: "Roboto Mono", sans-serif;
+    width: 580px;
+    padding-left: 3px;
+  }
   
   
   &-header {
-    margin: 0;
-    font-size: 46px;
+    margin: -5px 0 0;
+    font-size: 48px;
     line-height: 52px;
     font-weight: 500;
-    width: 450px;
+  }
+
+  &-text {
+    font-size: 22px;
   }
 
   .yellow {
@@ -53,6 +62,7 @@ body {
   .form {
     color: black;
     box-sizing: border-box;
+    font-family: "Lato", sans-serif;
     width: 400px;
     height: 250px;
     padding: 30px;
@@ -60,7 +70,7 @@ body {
     box-shadow: 2px 5px 20px 0 rgba(0,0,0,0.75);
 
     &-header {
-      margin: 0 0 25px;
+      margin: 0 0 21px;
       font-size: 20px;
       line-height: 20px;
     }
@@ -73,7 +83,8 @@ body {
     }
 
     .levels {
-      margin-bottom: 20px;
+      font-family: "Lato", sans-serif;
+      margin-bottom: 18px;
       width: 340px;
       height: 40px;
       border: 1px solid #a1a1a1;
@@ -90,6 +101,7 @@ body {
     }
 
     .how-many {
+      font-family: "Lato", sans-serif;
       display: flex;
       justify-content: space-between;
     }
@@ -179,24 +191,27 @@ body {
   }
 
   &-header {
+    font-family: "Lato", sans-serif;
     font-size: 20px;
-    margin: 0 0 12px;
+    font-weight: 400;
+    margin: 0 0 10px;
     text-align: center;
   }
   
   &-text {
+    font-family: "Lato", sans-serif;
     color: #adadad;
     font-size: 16px;
-    margin: 17px 0 10px;
+    margin-bottom: 10px;
   }
   
   &-text-header {
     text-align: center;
-    margin-bottom: 17px;
+    margin: 10px 0 18px;
   }
 
   &-form {
-    margin: 0 60px;
+    margin: 0 59px;
   }
 
   &-input {
@@ -204,7 +219,7 @@ body {
     height: 40px;
     box-sizing: border-box;
     border: 1px solid #bababa;
-    outline-color: #60a75e;
+    outline: none;
     padding-left: 40px;
 
     &:hover,
@@ -224,33 +239,8 @@ body {
 
     &-phone {
       padding-left: 90px;
+      z-index: 2;
     }
-  }
-
-  .country {
-    display: block;
-    width: 68px;
-    height: 38px;
-    margin-top: -40px;
-    position: relative;
-    top: 39px;
-    left: 1px;
-    border: none;
-    border-right: 1px solid #bababa;
-    padding-left: 5px;
-    appearance: none;
-    background-image: url(../images/drop_down_icon.svg);
-    background-repeat: no-repeat;
-    background-position: 40px 16px;
-  }
-  
-  .plus {
-    display: block;
-    width: 20px;
-    margin-top: -25px;
-    position: relative;
-    top: 28px;
-    left: 77px;
   }
 }
 
@@ -316,8 +306,26 @@ div.ui-dialog {
 
 div.popup-content {
   margin: 0;
-  box-sizing: border-box;
   overflow: hidden;
+  padding-bottom: 30px;
+}
+
+div.iti__selected-flag {
+  outline: none;
+}
+
+ul.iti__country-list {
+  position: relative;
+  bottom: 150px;
+  width: 55px;
+  max-height: 120px;
+  overflow: hidden;
+  overflow-y: visible;
+}
+
+div.ui-widget input {
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
 }
 
 div.ui-dialog .ui-dialog-buttonpane {
@@ -335,7 +343,7 @@ div.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {
   background: #fff;
   width: 145px;
   height: 40px;
-  margin: 10px 0 30px 155px;
+  margin: 0 0 30px 155px;
 }
 
 .ui-button span.ui-button-text {
